# Data-Mining-Algorithm

./: KDDM_WS22_23_Exercise2-4.ipynb  README.md  pyproject.toml  tutorial01.ipynb
