[tool.poetry]
name = "data-mining-algorithm"
version = "0.1.0"
description = ""
authors = ["Shannah Santucci <shannah.santucci@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
